--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:gravity="center"
-    android:background="@color/colorPrimary">
+    android:orientation="vertical"
+    android:background="@color/cornflower_blue">
 
     <ImageView
         android:id="@+id/splash_screen_logo"
@@ -15,4 +16,13 @@
         android:layout_height="wrap_content"
         android:src="@drawable/inventory_logo" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/splash_screen_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="50sp" />
+
+
+</LinearLayout>
