--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -127,6 +127,7 @@
     <color name="forest_green">#228B22</color>
     <color name="light_sea_green">#20B2AA</color>
     <color name="dodger_blue">#1E90FF</color>
+    <color name="dodger_blue_dark">#1776d3</color>
     <color name="midnight_blue">#191970</color>
     <color name="aqua">#00FFFF</color>
     <color name="cyan">#00FFFF</color>
