--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".CatalogActivity">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
