"updated schema, added description field to database"

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -99,7 +99,7 @@
 
     </LinearLayout>
 
-    <!-- Tags layout -->
+    <!-- Tags category -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -141,69 +141,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <!--&lt;!&ndash; Gender category &ndash;&gt;-->
-    <!--<LinearLayout-->
-        <!--android:id="@+id/container_gender"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--&lt;!&ndash; Label &ndash;&gt;-->
-        <!--<TextView-->
-            <!--android:text="@string/category_gender"-->
-            <!--style="@style/CategoryStyle" />-->
-
-        <!--&lt;!&ndash; Input field &ndash;&gt;-->
-        <!--<LinearLayout-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="2"-->
-            <!--android:orientation="vertical">-->
-
-            <!--&lt;!&ndash; Gender drop-down spinner &ndash;&gt;-->
-            <!--<Spinner-->
-                <!--android:id="@+id/spinner_gender"-->
-                <!--android:layout_height="48dp"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:paddingRight="16dp"-->
-                <!--android:spinnerMode="dropdown"/>-->
-        <!--</LinearLayout>-->
-    <!--</LinearLayout>-->
-
-    <!--&lt;!&ndash; Measurement category &ndash;&gt;-->
-    <!--<LinearLayout-->
-        <!--android:id="@+id/container_measurement"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--&lt;!&ndash; Label &ndash;&gt;-->
-        <!--<TextView-->
-            <!--android:text="@string/category_measurement"-->
-            <!--style="@style/CategoryStyle" />-->
-
-        <!--&lt;!&ndash; Input fields &ndash;&gt;-->
-        <!--<RelativeLayout-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="2"-->
-            <!--android:paddingLeft="4dp">-->
-
-            <!--&lt;!&ndash; Weight field &ndash;&gt;-->
-            <!--<EditText-->
-                <!--android:id="@+id/edit_pet_weight"-->
-                <!--android:hint="@string/hint_pet_weight"-->
-                <!--android:inputType="number"-->
-                <!--style="@style/EditorFieldStyle" />-->
-
-            <!--&lt;!&ndash; Units for weight (kg) &ndash;&gt;-->
-            <!--<TextView-->
-                <!--android:id="@+id/label_weight_units"-->
-                <!--android:text="@string/unit_pet_weight"-->
-                <!--style="@style/EditorUnitsStyle"/>-->
-        <!--</RelativeLayout>-->
-    <!--</LinearLayout>-->
-
 
 </LinearLayout>
