--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -6,6 +6,6 @@
     <item
         android:id="@+id/action_delete_current_entry"
         android:title="@string/action_delete_current_entry"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
 
 </menu>
