"modified editorActivity, itemActivity, contract and schema to add BLOB type in order to let user set their own product image"

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -142,4 +142,10 @@
 
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="insert image"
+        android:onClick="insertImage"/>
+
 </LinearLayout>
