"modified editorActivity to allow user to obtain image from gallery and convert to bitmap"

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -148,4 +148,9 @@
         android:text="insert image"
         android:onClick="insertImage"/>
 
+    <ImageView
+        android:id="@+id/edit_item_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
