--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,156 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditorActivity"
-    android:orientation="vertical"
-    android:padding="@dimen/activity_margin">
+    tools:context=".EditorActivity">
 
-
-    <!-- Overview category -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/activity_margin">
 
-        <!-- Label -->
-        <TextView
-            style="@style/CategoryStyle"
-            android:text="@string/category_overview"/>
+        <!-- Contains item image -->
+        <ImageView
+            android:id="@+id/edit_item_image"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:layout_weight="0.4"/>
 
-        <!-- Input fields -->
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:paddingLeft="4dp"
-            android:orientation="vertical">
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.6">
 
-            <!-- Name field -->
-            <EditText
-                android:id="@+id/edit_item_name"
-                style="@style/EditorFieldStyle"
-                android:hint="@string/hint_item_name"
-                android:inputType="textCapWords"/>
-
-            <!-- Quantity field -->
-            <EditText
-                android:id="@+id/edit_item_quantity"
-                style="@style/EditorFieldStyle"
-                android:hint="@string/hint_item_quantity"
-                android:inputType="number"/>
-
+            <!-- Contains all the item info -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="10"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="@dimen/activity_margin">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                <!-- Overview category -->
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/dollarSign"/>
+                    android:orientation="horizontal">
 
-                <!-- Price field -->
-                <EditText
-                    android:id="@+id/edit_item_price"
-                    style="@style/EditorFieldStylePrice"
-                    android:hint="@string/hint_item_price"
-                    android:inputType="numberDecimal"/>
+                    <!-- Label -->
+                    <TextView
+                        style="@style/CategoryStyle"
+                        android:text="@string/category_overview" />
+
+                    <!-- Input fields -->
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:orientation="vertical"
+                        android:paddingLeft="4dp">
+
+                        <!-- Name field -->
+                        <EditText
+                            android:id="@+id/edit_item_name"
+                            style="@style/EditorFieldStyle"
+                            android:hint="@string/hint_item_name"
+                            android:inputType="textCapWords" />
+
+                        <!-- Quantity field -->
+                        <EditText
+                            android:id="@+id/edit_item_quantity"
+                            style="@style/EditorFieldStyle"
+                            android:hint="@string/hint_item_quantity"
+                            android:inputType="number" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="10">
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/dollarSign" />
+
+                            <!-- Price field -->
+                            <EditText
+                                android:id="@+id/edit_item_price"
+                                style="@style/EditorFieldStylePrice"
+                                android:hint="@string/hint_item_price"
+                                android:inputType="numberDecimal" />
+
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <!-- Description category -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="32dp">
+
+                    <!-- Label -->
+                    <TextView
+                        style="@style/CategoryStyle"
+                        android:text="@string/category_description" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:orientation="vertical"
+                        android:paddingLeft="4dp">
+
+                        <!-- Description field -->
+                        <EditText
+                            android:id="@+id/edit_item_description"
+                            style="@style/EditorFieldStyle"
+                            android:hint="@string/hint_item_description"
+                            android:inputType="textCapWords" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <!-- Tags category -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="32dp">
+
+                    <!-- Label -->
+                    <TextView
+                        style="@style/CategoryStyle"
+                        android:text="@string/category_tag" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:orientation="vertical"
+                        android:paddingLeft="4dp">
+
+                        <!-- Tag field -->
+                        <EditText
+                            android:id="@+id/edit_item_tag1"
+                            style="@style/EditorFieldStyle"
+                            android:hint="@string/hint_item_tag1"
+                            android:inputType="textCapWords" />
+
+                        <EditText
+                            android:id="@+id/edit_item_tag2"
+                            style="@style/EditorFieldStyle"
+                            android:hint="@string/hint_item_tag2"
+                            android:inputType="textCapWords" />
+
+                        <EditText
+                            android:id="@+id/edit_item_tag3"
+                            style="@style/EditorFieldStyle"
+                            android:hint="@string/hint_item_tag3"
+                            android:inputType="textCapWords" />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <!-- Description category -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="32dp">
-
-        <!-- Label -->
-        <TextView
-            style="@style/CategoryStyle"
-            android:text="@string/category_description"/>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:paddingLeft="4dp"
-            android:orientation="vertical">
-
-            <!-- Description field -->
-            <EditText
-                android:id="@+id/edit_item_description"
-                style="@style/EditorFieldStyle"
-                android:hint="@string/hint_item_description"
-                android:inputType="textCapWords"/>
-
-        </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
 
-    <!-- Tags category -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="32dp">
-
-        <!-- Label -->
-        <TextView
-            style="@style/CategoryStyle"
-            android:text="@string/category_tag"/>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:paddingLeft="4dp"
-            android:orientation="vertical">
-
-            <!-- Tag field -->
-            <EditText
-                android:id="@+id/edit_item_tag1"
-                style="@style/EditorFieldStyle"
-                android:hint="@string/hint_item_tag1"
-                android:inputType="textCapWords"/>
-
-            <EditText
-                android:id="@+id/edit_item_tag2"
-                style="@style/EditorFieldStyle"
-                android:hint="@string/hint_item_tag2"
-                android:inputType="textCapWords"/>
-
-            <EditText
-                android:id="@+id/edit_item_tag3"
-                style="@style/EditorFieldStyle"
-                android:hint="@string/hint_item_tag3"
-                android:inputType="textCapWords"/>
-
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <Button
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="insert image"
-        android:onClick="insertImage"/>
+        android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"
+        android:onClick="insertImage"
+        app:srcCompat="@android:drawable/ic_menu_camera"
+        app:layout_anchor="@id/edit_item_image"
+        app:layout_anchorGravity="bottom|right|end"/>
 
-    <ImageView
-        android:id="@+id/edit_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
