"added bitmap to cursor loader in editor activity and added edit item option in item activity overflow menu"

--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -8,4 +8,9 @@
         android:title="@string/action_delete_current_entry"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_edit_current_entry"
+        android:title="Edit item"
+        app:showAsAction="never" />
+
 </menu>
