--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -7,6 +7,7 @@
     android:fitsSystemWindows="true"
     tools:context=".ItemActivity">
 
+    <!-- Collapsable toolbar -->
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
@@ -44,7 +45,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
+    <!-- Item info -->
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -57,7 +58,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/activity_margin">
-
 
             <!-- Quantity field -->
             <LinearLayout
@@ -107,7 +107,6 @@
 
             </LinearLayout>
 
-
             <TextView
                 style="@style/ItemCategoryStyle"
                 android:text="Description: " />
@@ -116,6 +115,47 @@
                 android:id="@+id/item_description_field"
                 style="@style/ItemFieldStyle" />
 
+            <TextView
+                style="@style/ItemCategoryStyle"
+                android:paddingBottom="16dp"
+                android:text="Tags: " />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_tag1_field"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/ItemFieldStyle"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/tag_box"
+                    android:text="Tag1"
+                    android:textColor="@android:color/white"/>
+
+                <TextView
+                    android:id="@+id/item_tag2_field"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/ItemFieldStyle"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/tag_box"
+                    android:text="Tag2"
+                    android:textColor="@android:color/white"/>
+
+                <TextView
+                    android:id="@+id/item_tag3_field"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/ItemFieldStyle"
+                    android:layout_margin="4dp"
+                    android:background="@drawable/tag_box"
+                    android:text="Tag3"
+                    android:textColor="@android:color/white"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
