--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -143,6 +143,7 @@
                         android:layout_margin="8dp"
                         android:background="@drawable/tag_box"
                         android:text="Tag1"
+                        android:visibility="gone"
                         android:textColor="@android:color/white"/>
 
                     <TextView
@@ -153,6 +154,7 @@
                         android:layout_margin="8dp"
                         android:background="@drawable/tag_box"
                         android:text="Tag2"
+                        android:visibility="gone"
                         android:textColor="@android:color/white"/>
 
                     <TextView
@@ -163,6 +165,7 @@
                         android:layout_margin="8dp"
                         android:background="@drawable/tag_box"
                         android:text="Tag3"
+                        android:visibility="gone"
                         android:textColor="@android:color/white"/>
 
                 </org.apmem.tools.layouts.FlowLayout>
