"added a new style for tags"

--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -139,8 +139,7 @@
                         android:id="@+id/item_tag1_field"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/ItemFieldStyle"
-                        android:layout_margin="8dp"
+                        style="@style/TagStyle"
                         android:background="@drawable/tag_box"
                         android:text="Tag1"
                         android:visibility="gone"
