--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,6 +89,9 @@
         <item name="android:paddingTop">16dp</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
         <item name="android:layout_margin">8dp</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@drawable/tag_box</item>
     </style>
 
 
