"added ripple effect for items in catalog activity"

--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -10,7 +10,8 @@
     <!-- This layout contains all the views -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <!-- Listview shows all available items -->
         <ListView
@@ -18,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:divider="@null"
-            android:dividerHeight="0dp"></ListView>
+            android:dividerHeight="0dp"
+            ></ListView>
 
         <!-- Empty view for the list -->
         <RelativeLayout
