--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,15 +5,15 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <!-- card view to display info -->
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
-        app:cardUseCompatPadding="true" >
+        app:cardUseCompatPadding="true"
+        android:foreground="@drawable/ripple_effect">
 
         <!-- this linear layout contains all info -->
         <LinearLayout
