"added onclick listener for image in edit view"

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -19,7 +19,8 @@
             android:layout_height="0dp"
             android:layout_weight="0.4"
             android:scaleType="centerCrop"
-            android:src="@drawable/image_prompt"/>
+            android:src="@drawable/image_prompt"
+            android:clickable="true"/>
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
